--- a/java/build.gradle
+++ b/java/build.gradle
@@ -16,6 +16,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation("io.projectreactor:reactor-core:3.4.0")
 }
 
 test {
